MDR-2601 - news not showing up correctly on mobile version

--- a/docroot/sites/all/themes/oira_frontend/css/style.css
+++ b/docroot/sites/all/themes/oira_frontend/css/style.css
@@ -14838,8 +14838,11 @@ body.front .view-slideshow blockquote.image-field-caption p,
   }
   /*HOME
 ***************************************/
-  .front .views-view-grid.cols-3 .row > :nth-child(3) {
-    display: block;
+  .front .views-view-grid.cols-3 > .row > div:nth-child(2) {
+    display: none;
+  }
+  .front .views-view-grid.cols-3 > .row > div:nth-child(3) {
+    display: none;
   }
   .front .panels-flexible-region-new-slider {
     margin-top: 5px !important;
@@ -14887,8 +14890,11 @@ body.front .view-slideshow blockquote.image-field-caption p,
   .front .panels-flexible-region-new-promotional_materials h3.pane-title {
     color: #786586;
   }
-  .front .panels-flexible-region-new-promotional_materials .view-display-id-oshnews_latest .view-display-id-attachment_1 {
+  .front .panels-flexible-region-new-promotional_materials .view-display-id-oshnews_latest .view-display-id-attachment_1 .image-wrapper {
     display: none;
+  }
+  .front .panels-flexible-region-new-promotional_materials .view-display-id-oshnews_latest .view-display-id-attachment_1 h4 a {
+    font-size: 0.9em!important;
   }
   .front .panels-flexible-region-new-promotional_materials .views-item-columns-container {
     padding: 0px !important;
