--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
@@ -185,8 +185,11 @@ h1.page-header {
 /*HOME
 ***************************************/
 .front{
-	.views-view-grid.cols-3 .row > :nth-child(3){
-		display: block;
+	.views-view-grid.cols-3 > .row > div:nth-child(2){
+		display: none;
+	}
+	.views-view-grid.cols-3 > .row > div:nth-child(3){
+		display: none;
 	}
 	.panels-flexible-region-new-slider{
 		margin-top: 5px !important;
@@ -245,7 +248,12 @@ h1.page-header {
 		}
 		.view-display-id-oshnews_latest{
 			.view-display-id-attachment_1{
-				display: none;
+				.image-wrapper{
+					display: none;
+				}
+				h4 a{
+					font-size: 0.9em!important;
+				}
 			}
 		}
 		.views-item-columns-container{
@@ -2121,6 +2129,5 @@ div[id*="quicktabs-container-view__country_partner_content__block"]{
 		}
 	}
 }
-
 
 }
